# backshift

./: .gitignore  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: client-ci.yml  edge-ci.yml  release.yml
crates/backshift-adapters/: Cargo.toml
crates/backshift-adapters/src/: adapter.rs  amplitude.rs  facebook.rs  ga4.rs  mixpanel.rs  posthog.rs  segment.rs  sentry.rs  tiktok.rs  webhook.rs
crates/backshift-core/: Cargo.toml
crates/backshift-core/src/: lib.rs
crates/backshift-server/: Cargo.toml
crates/backshift-server/src/: lib.rs  main.rs  routes.rs
crates/backshift-server/tests/: ingest_integration.rs
crates/backshift-vercel/: Cargo.toml
crates/backshift-worker/: Cargo.toml  wrangler.toml
crates/backshift-worker/src/: lib.rs
crates/nightshift-adapters/: Cargo.toml
crates/nightshift-adapters/src/: adapter.rs  ga4.rs  lib.rs  mixpanel.rs  posthog.rs  sentry.rs  webhook.rs
crates/nightshift-core/: Cargo.toml
crates/nightshift-core/src/: dedup.rs  event.rs  pii.rs
crates/nightshift-server/: Cargo.toml
crates/nightshift-server/src/: config.rs  lib.rs  main.rs  routes.rs
crates/nightshift-server/tests/: ingest_integration.rs
crates/nightshift-vercel/: Cargo.toml
crates/nightshift-worker/: Cargo.toml  wrangler.toml
crates/nightshift-worker/src/: lib.rs
examples/nextjs-demo/: .env.local.example  next.config.ts  package.json
examples/nextjs-demo/src/app/: layout.tsx  page.tsx
examples/nextjs-demo/src/components/: BackshiftProvider.tsx  ErrorDemo.tsx  IdentifyForm.tsx  NightshiftProvider.tsx  TrackButton.tsx
