[workspace]
members = [
  "crates/backshift-core",
  "crates/backshift-adapters",
  "crates/backshift-worker",
  "crates/backshift-vercel",
  "crates/backshift-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
once_cell = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

# HTTP client — feature-gated per target
reqwest = { version = "0.12", features = ["json"] }

# Test deps
httpmock = "0.7"
tokio-test = "0.4"
