[package]
name = "backshift-server"
version = "0.1.0"
edition = "2021"
description = "Standalone Axum HTTP server for Backshift edge proxy"

[lib]
name = "backshift_server"
path = "src/lib.rs"

[[bin]]
name = "backshift-server"
path = "src/main.rs"

[dependencies]
backshift-core = { path = "../backshift-core" }
backshift-adapters = { path = "../backshift-adapters" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
tokio-test = { workspace = true }
tower = { workspace = true }
