[package]
name = "backshift-vercel"
version = "0.1.0"
edition = "2021"
description = "Vercel Edge Functions WASM target for Backshift"

[lib]
crate-type = ["cdylib"]

[dependencies]
backshift-core = { path = "../backshift-core" }
backshift-adapters = { path = "../backshift-adapters" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
tracing = { workspace = true }
