[package]
name = "nightshift-adapters"
version = "0.1.0"
edition = "2021"
description = "Fan-out adapter implementations for Nightshift (GA4, Webhook, Sentry)"

[dependencies]
nightshift-core = { path = "../nightshift-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
url = "2"
uuid = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
httpmock = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
