[package]
name = "nightshift-server"
version = "0.1.0"
edition = "2021"
description = "Standalone Axum HTTP server for Nightshift edge proxy"

[lib]
name = "nightshift_server"
path = "src/lib.rs"

[[bin]]
name = "nightshift-server"
path = "src/main.rs"

[dependencies]
nightshift-core = { path = "../nightshift-core" }
nightshift-adapters = { path = "../nightshift-adapters" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
tokio-test = { workspace = true }
tower = { workspace = true }
