[package]
name = "nightshift-vercel"
version = "0.1.0"
edition = "2021"
description = "Vercel Edge Functions WASM target for Nightshift"

[lib]
crate-type = ["cdylib"]

[dependencies]
nightshift-core = { path = "../nightshift-core" }
nightshift-adapters = { path = "../nightshift-adapters" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
tracing = { workspace = true }
